Estudos de SpringCloudConfig

--- a/spring-cloud/spring-cloud-config/server/src/main/resources/application.properties
+++ b/spring-cloud/spring-cloud-config/server/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8888
-spring.cloud.config.server.git.uri=
+spring.cloud.config.server.git.uri=file:///home/mapo/Desktop/TechStuff/tutorials/spring-cloud/spring-cloud-config/config-repo
 spring.cloud.config.server.git.clone-on-start=true
+spring.cloud.config.server.encrypt.enabled=true
 security.user.name=root
 security.user.password=s3cr3t
 encrypt.key-store.location=classpath:/config-server.jks
